<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.example.nero.estateagent.PropertySearchFragments.PropertySearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/brown">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="13dp"
            android:layout_marginLeft="40dp"
            android:textColor="@color/white"
            android:text="Property Search"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addressTitle"
        android:textSize="@dimen/addressTitle"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/property_search_edittext"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:shadowColor="@color/black"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/addressEditText"
        android:maxLines="1"
        android:ellipsize="end"
        android:hint="@string/addressTitle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priceTitle"
            android:textSize="@dimen/filterTitle"
            android:layout_marginTop="40dp"
            android:textColor="@color/black"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Spinner
                android:id="@+id/property_search_spn_nominPrice"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:background="@color/brown"
                android:layout_marginTop="10dp"
                android:layout_alignParentLeft="true">
            </Spinner>

            <Spinner
                android:id="@+id/property_search_spn_nomaxPrice"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:background="@color/brown"
                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true">
            </Spinner>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/bedroomTitle"
            android:textSize="@dimen/filterTitle"
            android:textColor="@color/black"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Spinner
                android:id="@+id/property_search_spn_nominBedroom"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:background="@color/brown"
                android:layout_marginTop="10dp"
                android:layout_alignParentLeft="true">
            </Spinner>

            <Spinner
                android:id="@+id/property_search_spn_nomaxBedroom"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:background="@color/brown"
                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true">
            </Spinner>
        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/propertyTypeTitle"
            android:textSize="@dimen/filterTitle"
            android:textColor="@color/black"/>
        <Spinner
            android:id="@+id/property_search_spn_propertyType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/brown"
            android:layout_marginTop="10dp"
            android:layout_alignParentRight="true">
        </Spinner>

    </LinearLayout>


</LinearLayout>
